partially fixed image sizing for index hero-slides on small devices

--- a/mosh/css/responsive.css
+++ b/mosh/css/responsive.css
@@ -255,20 +255,22 @@
 @media (min-width: 480px) and (max-width: 767px) {
     .welcome_area,
     .single-hero-slide {
-        height: 700px;
+        height: 800px;
     }
     .clients-logo-area > a > img {
         max-width: 75px;
         height: auto;
         margin: 0 15px;
     }
+
 }
 
 @media (min-width: 576px) and (max-width: 767px) {
     .welcome_area,
     .single-hero-slide {
-        height: 800px;
+        height: 900px;
     }
+
     .hero-slide-content h2 {
         font-size: 30px;
     }
